tests/error/11.desc
Compilation error - invalid number expression