tests/error/11.out
Parser: сompilation error - syntax error, unexpected '*', expecting _NUMBER or _NUMBER_VAR or _LEN_FUNC or '(' near line 3
